2005-11-23  Jan Schmidt  <thaytan@mad.scientist.com>

	* po/af.po:
	* po/az.po:
	* po/cs.po:
	* po/en_GB.po:
	* po/hu.po:
	* po/it.po:
	* po/nb.po:
	* po/nl.po:
	* po/or.po:
	* po/sq.po:
	* po/sr.po:
	* po/sv.po:
	* po/uk.po:
	* po/vi.po:
	  Translation string updates

	* sys/v4l/gstv4lsrc.c: (gst_v4lsrc_fixate), (gst_v4lsrc_get_caps),
	(gst_v4lsrc_set_caps):
	* sys/v4l/v4lsrc_calls.c: (gst_v4lsrc_get_fps),
	(gst_v4lsrc_get_fps_list), (gst_v4lsrc_buffer_new):
	* sys/v4l/v4lsrc_calls.h:
	  Improve v4lsrc, by making it work again.

2005-11-23  Jan Schmidt  <thaytan@mad.scientist.com>

	* ext/libvisual/visual.c: (gst_visual_chain):
	  Fix the fps calculations.

	* gst/ffmpegcolorspace/avcodec.h:
	  Move structure element for clarity

	* gst-libs/gst/interfaces/tunernorm.c: (gst_tuner_norm_init):
	* gst-libs/gst/interfaces/tunernorm.h:
	* sys/v4l/gstv4ljpegsrc.c: (gst_v4ljpegsrc_src_link):
	* sys/v4l/gstv4lmjpegsink.c: (gst_v4lmjpegsink_base_init):
	* sys/v4l/gstv4lmjpegsrc.c: (gst_v4lmjpegsrc_base_init),
	(gst_v4lmjpegsrc_get_fps), (gst_v4lmjpegsrc_src_convert),
	(gst_v4lmjpegsrc_src_query), (gst_v4lmjpegsrc_get),
	(gst_v4lmjpegsrc_getcaps):
	* sys/v4l/gstv4lsrc.c: (gst_v4lsrc_fixate), (gst_v4lsrc_get_caps),
	(gst_v4lsrc_set_caps):
	* sys/v4l/gstv4lsrc.h:
	* sys/v4l/v4l_calls.c: (gst_v4l_open):
	* sys/v4l/v4lsrc_calls.c: (gst_v4lsrc_get_fps),
	(gst_v4lsrc_get_fps_list), (gst_v4lsrc_buffer_new):
	* sys/v4l/v4lsrc_calls.h:
	  Fractional framerates...

2005-11-22  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstbaseaudiosink.c:
	(gst_base_audio_sink_class_init), (gst_base_audio_sink_set_clock),
	(gst_base_audio_sink_render), (gst_base_audio_sink_change_state):
	And we provide a clock by default, of course...

2005-11-22  Wim Taymans  <wim@fluendo.com>

	* gst-libs/gst/audio/gstaudioclock.c: (gst_audio_clock_init):
	This clock can be slaved to a master clock now.

	* gst-libs/gst/audio/gstbaseaudiosink.c: